--- a/.forestry/front_matter/templates/card.yml
+++ b/.forestry/front_matter/templates/card.yml
@@ -2,13 +2,41 @@
 label: row
 hide_body: false
 is_partial: true
-display_field: cards
 fields:
+- type: text
+  hidden: true
+  label: block
+  name: block
+  default: three-column-1
 - type: field_group
-  label: cards
-  name: cards
-  hidden: false
+  name: col_1
+  label: Column 1
   fields:
-  - type: field_group
-    name: c
-    label: c
+  - type: include
+    template: text-column
+    label: Column
+    name: column
+- type: field_group
+  name: col_2
+  label: Column 2
+  fields:
+  - type: include
+    name: column
+    label: Column
+    template: text-column
+- type: field_group
+  name: col_3
+  label: Column 3
+  fields:
+  - type: include
+    name: column
+    label: Column
+    template: text-column
+- type: field_group
+  name: col_4
+  label: Column 4
+  fields:
+  - type: include
+    name: column
+    label: Column
+    template: text-column
