--- a/.forestry/front_matter/templates/3-column-text.yml
+++ b/.forestry/front_matter/templates/3-column-text.yml
@@ -40,3 +40,7 @@ fields:
     name: column
     label: Column
     template: text-column
+  config:
+    wysiwyg: true
+    schema:
+      format: html
